--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -6,14 +6,54 @@
     --app-padding-width: 40px;
     --app-blue:#0417f1;
 }
-main{
+main {
+    display: flex;
+    height: 100vh;
+    background-color: #000;
+}
+.main-container {
+    width:100%;
+    height:100%;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+}
+.main-container div {
+    display: flex;
+    flex-direction: column;
+}
+.main-container div > div {
+    margin-top: 10px;
+}
+.guess{
+    font-size:26px;
+    color:#fff;
+    text-align:center;
+}
+.sys-number {
     display:flex;
-    height:100vh;
     justify-content:center;
     align-items:center;
-    background-color:#000;
+    font-size:86px;
+    width: 300px;
+    height: 300px;
+    background-color: #303030;
+    border-radius: 50%;
+    color: var(--app-blue);
 }
- 
+.msg-cls {
+    width:300px;
+    height:60px;
+    font-size: 18px;
+    background-color: #303030;
+    border-radius: 4px;
+    color: #fff;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
 .input-cls {
     width: 250px;
     height: 50px;
@@ -25,6 +65,9 @@ main{
     color: #fff;
 }
 .btn-compute {
+    position:absolute;
+    right:10px;
+    top:10px;
     width: 120px;
     height: 50px;
     color: #fff;
