--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -47,7 +47,7 @@ main {
     width:300px;
     height:60px;
     font-size: 18px;
-    background-color: #303030;
+   text-align:center;
     border-radius: 4px;
     color: #fff;
     display:flex;
@@ -55,7 +55,7 @@ main {
     align-items:center;
 }
 .input-cls {
-    width: 250px;
+    width: 300px;
     height: 50px;
     border-radius: 4px;
 }
