--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -55,6 +55,7 @@ main {
     align-items:center;
 }
 .input-cls {
+    text-align:center;
     width: 300px;
     height: 50px;
     border-radius: 4px;
